--- a/core/src/main/res/navigation/nav_graph.xml
+++ b/core/src/main/res/navigation/nav_graph.xml
@@ -2,10 +2,14 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/item_more">
+    app:startDestination="@id/item_dashboard">
 
     <fragment
         android:id="@+id/item_more"
         android:name="com.sami.features.more.presentation.ui.MoreFragment" />
+
+    <fragment
+        android:id="@+id/item_dashboard"
+        android:name="com.sami.features.dashboard.presentation.ui.DashboardFragment" />
 
 </navigation>
