--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#777777</color>
-    <color name="gray_20">#33777777</color>
+    <color name="gray_20">#F2F2F2</color>
+    <color name="gray_10">#1A777777</color>
 </resources>
