--- a/freatures/auth/register/src/main/res/layout/fragment_register.xml
+++ b/freatures/auth/register/src/main/res/layout/fragment_register.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/edit_text_full_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Full Name"
+                    android:hint="@string/full_name"
                     android:imeOptions="actionNext"
                     android:inputType="textPersonName"
                     style="@style/EditTextStyle"/>
@@ -50,7 +50,7 @@
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
                     android:imeOptions="actionNext"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     style="@style/EditTextStyle"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -70,7 +70,7 @@
                     android:inputType="number"
                     android:maxLength="10"
                     android:imeOptions="actionNext"
-                    android:hint="National ID"
+                    android:hint="@string/national_id"
                     style="@style/EditTextStyle"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -90,7 +90,7 @@
                     android:inputType="phone"
                     android:maxLength="10"
                     android:imeOptions="actionNext"
-                    android:hint="Phone Number"
+                    android:hint="@string/phone_number"
                     style="@style/EditTextStyle"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -109,7 +109,7 @@
                     android:layout_height="match_parent"
                     android:inputType="date"
                     android:imeOptions="actionNext"
-                    android:hint="Date Of Birth"
+                    android:hint="@string/date_of_birth"
                     style="@style/EditTextStyle"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -129,7 +129,7 @@
                     android:layout_height="match_parent"
                     android:inputType="textPassword"
                     android:imeOptions="actionDone"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     style="@style/EditTextStyle"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -138,7 +138,7 @@
                 android:id="@+id/button_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="@string/register"
                 android:textAllCaps="false"
                 android:paddingVertical="15dp"
                 android:layout_margin="20dp"/>
