--- a/freatures/main/src/main/res/menu/bottom_nav_menu.xml
+++ b/freatures/main/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,11 @@
     <item
         android:id="@+id/item_dashboard"
         android:icon="@drawable/ic_dashboard"
-        android:title="Dashboard" />
+        android:title="@string/dashboard" />
 
     <item
         android:id="@+id/item_more"
         android:icon="@drawable/ic_profile"
-        android:title="More" />
+        android:title="@string/more" />
 
 </menu>
