--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Base.Theme.NyTimesSample" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.NyTimesSample" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
 
