--- a/freatures/auth/register/src/main/res/layout/fragment_register.xml
+++ b/freatures/auth/register/src/main/res/layout/fragment_register.xml
@@ -30,6 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/full_name"
+                    android:textAlignment="viewStart"
                     android:imeOptions="actionNext"
                     android:inputType="textPersonName"
                     style="@style/EditTextStyle"/>
@@ -49,6 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
+                    android:textAlignment="viewStart"
                     android:imeOptions="actionNext"
                     android:hint="@string/email"
                     style="@style/EditTextStyle"/>
@@ -68,6 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
+                    android:textAlignment="viewStart"
                     android:maxLength="10"
                     android:imeOptions="actionNext"
                     android:hint="@string/national_id"
@@ -81,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
+                app:prefixText="+962"
                 style="@style/TextInputLayoutStyle">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -88,7 +92,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="phone"
-                    android:maxLength="10"
+                    android:maxLength="9"
+                    android:textAlignment="viewStart"
                     android:imeOptions="actionNext"
                     android:hint="@string/phone_number"
                     style="@style/EditTextStyle"/>
@@ -107,8 +112,9 @@
                     android:id="@+id/edit_text_date_of_birth"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="date"
+                    android:inputType="text"
                     android:imeOptions="actionNext"
+                    android:textAlignment="viewStart"
                     android:hint="@string/date_of_birth"
                     style="@style/EditTextStyle"/>
 
@@ -129,6 +135,7 @@
                     android:layout_height="match_parent"
                     android:inputType="textPassword"
                     android:imeOptions="actionDone"
+                    android:textAlignment="viewStart"
                     android:hint="@string/password"
                     style="@style/EditTextStyle"/>
 
